# pyudunits2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
pyudunits2/: __init__.py  __main__.py  _baseless_unit.py  _datetime.py  _dimensionality.py  _exceptions.py  _expr_graph.py  _expr_simplifier.py  _ud_xml.py  _udunits2_xml_parser.py  _unit.py  _unit_reference.py  _unit_resolver.py  _unit_system.py  udunits2_combined.xml  udunits2_combined.xml.README
pyudunits2/_expr/: _atoms.py  _dimensionality.py  atoms.py  date_reference.py  dimensionality.py  expander.py  expr_split.py  graph.py  normaliser.py  split.py  substitute.py  sympy.py  sympy2.py
pyudunits2/_grammar/: README.md  __init__.py  compile.py  graph.py  udunits2Lexer.g4.jinja  udunits2Parser.g4
pyudunits2/_grammar/_antlr4_runtime/: BufferedTokenStream.py  FileStream.py  InputStream.py  LL1Analyzer.py  Lexer.py  Parser.py  ParserInterpreter.py  PredictionContext.py  RuleContext.py  StdinStream.py  Token.py  TokenStreamRewriter.py
pyudunits2/_grammar/_antlr4_runtime/atn/: ATN.py  ATNConfig.py  ATNConfigSet.py  ATNDeserializationOptions.py  ATNDeserializer.py  ATNSimulator.py  ATNState.py  LexerATNSimulator.py  LexerActionExecutor.py  ParserATNSimulator.py  PredictionMode.py  SemanticContext.py  Transition.py
pyudunits2/_grammar/_antlr4_runtime/dfa/: DFASerializer.py  DFAState.py
pyudunits2/_grammar/_antlr4_runtime/error/: DiagnosticErrorListener.py  ErrorListener.py  ErrorStrategy.py  Errors.py
pyudunits2/_grammar/_antlr4_runtime/tree/: ParseTreePatternMatcher.py  RuleTagToken.py  Trees.py
pyudunits2/_grammar/_antlr4_runtime/xpath/: XPath.py
pyudunits2/_grammar/parser/: udunits2Lexer.py  udunits2Parser.py  udunits2ParserVisitor.py
pyudunits2/tests/: conftest.py  test__main__.py  test_converter.py  test_datetime.py  test_dimensionality.py  test_graph.py  test_pyudunits2.py  test_unit.py  test_unit__basis.py  test_unit_basis.py  test_unit_system.py  test_xml_parser.py
pyudunits2/tests/_expr/: test_dimensionality.py  test_expr_split.py  test_graph.py  test_sympy.py  test_sympy2.py
pyudunits2/tests/_grammar/: test_graph.py  test_parse.py
